--- a/_posts/2012-01-02-beat2.md
+++ b/_posts/2012-01-02-beat2.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: Beat - Paranoias
+categories: [music, beat]
 ---
 
 <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/34889980&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
