--- a/_posts/2014-06-01-Draughts.markdown
+++ b/_posts/2014-06-01-Draughts.markdown
@@ -1,10 +1,10 @@
 ---
 layout: default
-modal-id: 5
-date: 2014-07-14
-img: safe.png
+modal-id: 2
+date: 2014-06-01
+img: draughts.png
 alt: image-alt
-project-date: April 2014
+project-date: June 2014
 client: Start Bootstrap
 category: Web Development
 description: Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!
