Improved portfolio content

--- a/_posts/2016-06-01-JumpVa.markdown
+++ b/_posts/2016-06-01-JumpVa.markdown
@@ -5,8 +5,9 @@ date: 2016-06-01
 img: jumpva.png
 alt: image-alt
 project-date: June 2016
-client: University of Valladolid
+client: Classwork for University of Valladolid
+client-link: https://github.com/MangostasUVaTeam/JumpVa
 category: Web Development
-description: Classwork project to understand and learn web architecture.
+description:
 
 ---
