--- a/portfolio/_posts/2017-08-10-TFGraph.markdown
+++ b/portfolio/_posts/2017-08-10-TFGraph.markdown
@@ -1,7 +1,7 @@
 ---
 layout: default
 date: 2017-08-10
-img: tfgraph.png
+img: tfgraph.jpg
 client: TFGraph
 client-link: https://github.com/TFGraph
 ---
