--- a/portfolio/_posts/2017-11-11-ng-katex.markdown
+++ b/portfolio/_posts/2017-11-11-ng-katex.markdown
@@ -1,7 +1,7 @@
 ---
 layout: default
 date: 2017-11-11
-img: ng-katex.png
+img: ng-katex.jpg
 client: ng-katex
 client-link: https://github.com/garciparedes/ng-katex
 ---
