--- a/portfolio/_posts/2016-06-01-JumpVa.markdown
+++ b/portfolio/_posts/2016-06-01-JumpVa.markdown
@@ -1,7 +1,7 @@
 ---
 layout: default
 date: 2016-06-01
-img: jumpva.png
+img: jumpva.jpg
 client: Classwork for University of Valladolid
 client-link: https://github.com/MangostasUVaTeam/JumpVa
 ---
